// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation should throw an error on the "headers" option with "true" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.headers should be an object:
   object { … }"
`;

exports[`validation should throw an error on the "index" option with "{}" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.index should be one of these:
   boolean | string
   Details:
    * options.index should be a boolean.
    * options.index should be a string."
`;

exports[`validation should throw an error on the "index" option with "0" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.index should be one of these:
   boolean | string
   Details:
    * options.index should be a boolean.
    * options.index should be a string."
`;

exports[`validation should throw an error on the "methods" option with "{}" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.methods should be an array:
   [string, ...]"
`;

exports[`validation should throw an error on the "methods" option with "true" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.methods should be an array:
   [string, ...]"
`;

exports[`validation should throw an error on the "mimeTypes" option with "foo" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.mimeTypes should be an object:
   object { … }"
`;

exports[`validation should throw an error on the "outputFileSystem" option with "false" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.outputFileSystem should be an object:
   object { … }"
`;

exports[`validation should throw an error on the "publicPath" option with "false" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.publicPath should be a string."
`;

exports[`validation should throw an error on the "serverSideRender" option with "0" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.serverSideRender should be a boolean."
`;

exports[`validation should throw an error on the "serverSideRender" option with "foo" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.serverSideRender should be a boolean."
`;

exports[`validation should throw an error on the "writeToDisk" option with "{}" value 1`] = `
"Invalid options object. Dev Middleware has been initialized using an options object that does not match the API schema.
 - options.writeToDisk should be one of these:
   boolean | function
   Details:
    * options.writeToDisk should be a boolean.
    * options.writeToDisk should be an instance of function."
`;
